// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeMapHelper build node deltas 1`] = `
{
  "attributes": {
    "theHeight": 100,
  },
  "color": "#666666",
  "deltas": {
    "theHeight": 33,
  },
  "depth": 1,
  "edgeAttributes": undefined,
  "flat": false,
  "height": 100,
  "heightDelta": 33,
  "id": undefined,
  "incomingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": -150,
  },
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "mapNodeDepth": 1,
  "markingColor": undefined,
  "name": "Anode",
  "outgoingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": 50,
  },
  "path": "/root/Anode",
  "visible": true,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`TreeMapHelper build node invertHeight 1`] = `
{
  "attributes": {
    "theHeight": 100,
  },
  "color": "#666666",
  "deltas": undefined,
  "depth": 1,
  "edgeAttributes": undefined,
  "flat": false,
  "height": 1900,
  "heightDelta": 0,
  "id": undefined,
  "incomingEdgePoint": Vector3 {
    "x": -50,
    "y": 1902,
    "z": -150,
  },
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "mapNodeDepth": 1,
  "markingColor": undefined,
  "name": "Anode",
  "outgoingEdgePoint": Vector3 {
    "x": -50,
    "y": 1902,
    "z": 50,
  },
  "path": "/root/Anode",
  "visible": true,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`TreeMapHelper build node minimal 1`] = `
{
  "attributes": {
    "theHeight": 100,
  },
  "color": "#666666",
  "deltas": undefined,
  "depth": 1,
  "edgeAttributes": undefined,
  "flat": false,
  "height": 100,
  "heightDelta": 0,
  "id": undefined,
  "incomingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": -150,
  },
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "mapNodeDepth": 1,
  "markingColor": undefined,
  "name": "Anode",
  "outgoingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": 50,
  },
  "path": "/root/Anode",
  "visible": true,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`TreeMapHelper build node should set lowest possible height caused by other visible edge pairs 1`] = `
{
  "attributes": {
    "theHeight": 100,
  },
  "color": "#666666",
  "deltas": undefined,
  "depth": 1,
  "edgeAttributes": undefined,
  "flat": false,
  "height": 100,
  "heightDelta": 0,
  "id": undefined,
  "incomingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": -150,
  },
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "mapNodeDepth": 1,
  "markingColor": undefined,
  "name": "Anode",
  "outgoingEdgePoint": Vector3 {
    "x": -50,
    "y": 102,
    "z": 50,
  },
  "path": "/root/Anode",
  "visible": true,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;
